Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-30378

Couch-KVStore does not validate parsing JSON values from ::readVBState

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 6.5.0
    • 5.5.0
    • couchbase-bucket
    • None
    • Untriaged
    • Unknown

    Description

      From the snippet from CouchKVStore::readVBState, we call parseUint64 which internally will only update the output if the input is valid, and return false otherwise. We should check the return value from these function calls and handle them appropriately.

      state = VBucket::fromString(vb_state.c_str());
      parseUint64(max_deleted_seqno, &maxDeletedSeqno);
      parseUint64(checkpoint_id, &checkpointId);

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tim.bradgate Tim Bradgate (Inactive)
            tim.bradgate Tim Bradgate (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty