MB-30378: Properly handle return codes in CouchKVStore::readVBState

Handle the return code from parse{U}Int64() function calls from
readVBState, and then update couchKVStore::initialize to handle the
case where readVBState fails.

Change-Id: I9ba5cbe20db3da60190882fbe0d8dcfe00e8268e
Reviewed-on: http://review.couchbase.org/96555
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Well-Formed: Build Bot <build@couchbase.com>